--- a/simple-pwa/src/App.css
+++ b/simple-pwa/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,7 +39,7 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
 
 .App {
   /* display: flex;
@@ -51,7 +51,7 @@
 }
 
 .splide__slide img {
-  width: 70%;
+  width: 200%;
   height: auto;
 }
 
